@@ -28,6 +28,7 @@ Nagios 3.x Change Log
 * Summary macros are now available as regular (non-environment) macros if requested when large installation tweaks are enabled
 * Bug fix for scheduling hostgroup host downtime through web interface
 * Better error logging when failing to rename/move files
+* Added $LASTHOSTSTATE$, $LASTHOSTSTATEID$, $LASTSERVICESTATE$, and $LASTSERVICESTATEID$ macros
 
 
 
